force-app/main/default/objects/Quote__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Account Name)</relationshipLabel>
    <relationshipName>Quotes_Account_Name</relationshipName>
    <type>Lookup</type>
</CustomField>