force-app/main/default/objects/Quote__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Approved By)</relationshipLabel>
    <relationshipName>Quotes_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>