force-app/main/default/objects/Quote__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Contact Name)</relationshipLabel>
    <relationshipName>Quotes_Contact_Name</relationshipName>
    <type>Lookup</type>
</CustomField>