force-app/main/default/objects/Quote__c/fields/is_Lock__c.field-meta.xml
<CustomField>
    <fullName>is_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether this record is locked or not.</description>
    <label>is Lock</label>
    <type>Checkbox</type>
</CustomField>