force-app/main/default/objects/Quote__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check that this quote is final quote of opportunity or not</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>