force-app/main/default/objects/Quote__c/fields/Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quotes (Parent Quote)</relationshipLabel>
    <relationshipName>Quotes_Parent_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>