force-app/main/default/objects/Quote__c/fields/PriceBook2Id__c.field-meta.xml
<CustomField>
    <fullName>PriceBook2Id__c</fullName>
    <formula>Opportunity_Name__r.PriceBook2Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBook</label>
    <type>Text</type>
</CustomField>