force-app/main/default/objects/Quote__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Price_book__c</referenceTo>
    <relationshipLabel>Quotes (Price Book)</relationshipLabel>
    <relationshipName>Quotes_Price_Book</relationshipName>
    <type>Lookup</type>
</CustomField>