force-app/main/default/objects/Quote__c/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <label>Quote Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>