force-app/main/default/objects/Quote__c/fields/Quote_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent_To__c</fullName>
    <label>Quote Sent To</label>
    <type>Email</type>
</CustomField>