force-app/main/default/objects/Quote__c/fields/Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Quote_Version__c</fullName>
    <label>Quote Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>