force-app/main/default/objects/Quote__c/fields/Reject_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Reject_Remarks__c</fullName>
    <description>This Field is used to store Quote Reject Remarks</description>
    <label>Reject Remarks</label>
    <type>TextArea</type>
</CustomField>