force-app/main/default/objects/Quote__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Quotes (Related Order)</relationshipLabel>
    <relationshipName>Quotes_Related_Order</relationshipName>
    <type>Lookup</type>
</CustomField>