force-app/main/default/objects/Quote__c/fields/SAP_Quote_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Quote_Reference_ID__c</fullName>
    <label>SAP Quote Reference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>