force-app/main/default/objects/Quote__c/fields/SCOPEs_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>SCOPEs_Ref_No__c</fullName>
    <label>SCOPE&apos;s Ref No.</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>