force-app/main/default/objects/Quote__c/fields/Syncing__c.field-meta.xml
<CustomField>
    <fullName>Syncing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syncing</label>
    <type>Checkbox</type>
</CustomField>