force-app/main/default/objects/Quote__c/fields/Uplift__c.field-meta.xml
<CustomField>
    <fullName>Uplift__c</fullName>
    <label>Uplift</label>
    <summarizedField>Quote_Line_Item__c.Uplift_Amount__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>